src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/CD4AC0013.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram U0455 {
  class T1;
  class T2;
  
  class C1 {
    String attr;
  }
  class C2 extends C1 {
    int attr;
  }
  class C3 extends C1 {
    String attr;
  }

  class C4 {
    int attr;
  }
  class C5 extends C4 {
    String attr;
  }
  class C6 extends C4 {
    int attr;
  }
  
  class C7 {
    T1 t1;
  }
  
  class C8 extends C7 {
    T2 t1;
  }
}